--- a/index.html
+++ b/index.html
@@ -71,27 +71,27 @@
         <li>Responsive across devices</li>
       </ul>
       <p>
-        🔗 <a href="#" target="_blank">Live Demo</a> |
+        🔗 <a href="https://salvasaadi.pythonanywhere.com/" target="_blank">Live Demo</a> |
         🛠️ <a href="#" target="_blank">GitHub Repo</a>
       </p>
     </div>
 
     <!-- Project 2 -->
-    <div class="project-card">
-      <h3>👗 Fashion Store Website</h3>
-      <p><strong>Technologies:</strong> HTML, CSS, JavaScript</p>
-      <p><strong>Description:</strong> A modern and responsive online fashion store template. This project demonstrates advanced CSS animations, hover effects, and a clean layout for showcasing fashion collections.</p>
-      <ul>
-        <li>Image Grid & Filters</li>
-        <li>Animated Sections</li>
-        <li>Product Cards with Hover Effects</li>
-        <li>Mobile Responsive Design</li>
-      </ul>
-      <p>
-        🔗 <a href="#" target="_blank">Live Preview</a> |
-        🛠️ <a href="#" target="_blank">GitHub Repo</a>
-      </p>
-    </div>
+   <div class="project-card">
+  <h3>🌍 Traveling Website</h3>
+  <p><strong>Technologies:</strong> HTML, CSS, JavaScript,Typescript</p>
+  <p><strong>Description:</strong> A modern and responsive travel website template. This project highlights destinations, travel packages, and user-friendly navigation with smooth animations and interactive elements.</p>
+  <ul>
+    <li>Destination Gallery & Filters</li>
+    <li>Interactive Travel Packages</li>
+    <li>Booking Form with Validation</li>
+    <li>Mobile Responsive Design</li>
+  </ul>
+  <p>
+    🔗 <a href="https://travel-gamma-sooty.vercel.app/" target="_blank">Live Preview</a> |
+    🛠️ <a href="https://github.com/salvasadi6614/travel.git" target="_blank">GitHub Repo</a>
+  </p>
+</div>
 
     <!-- Project 3 -->
     <div class="project-card">
