--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <li>Mobile Responsive Design</li>
   </ul>
   <p>
-    🔗 <a href="https://travel-gamma-sooty.vercel.app/" target="_blank">Live Preview</a> |
+    🔗 <a href="https://travel-gamma-sooty.vercel.app/" target="_blank">Live Demo</a> |
     🛠️ <a href="https://github.com/salvasadi6614/travel.git" target="_blank">GitHub Repo</a>
   </p>
 </div>
